--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--HTML 5 -->
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -11,22 +12,33 @@
 </head>
 
 <body>
-    <h1>Music Player</h1>
-    <h6>powered by leozin do sexo 3</h6>
+    <!--Title-->
+    <div id="musicPlayerTitle">
+        <h1>Music Player</h1>
+    </div>
+    <!--End of title-->
 
+    <!--music-container start-->
     <div class="music-container" id="music-container">
+        <!--music-info start-->
         <div class="music-info">
-            <h4 id="title"></h4>
+            <h4 id="title"></h4> <br />
             <div class="progress-container play" id="progress-container">
                 <div class="progress" id="progress"></div>
             </div>
         </div>
+        <!--end of music-info-->
 
+        <!-- calling audio api-->
         <audio src="music/intoToDust.mp3" id="audio"></audio>
 
+        <!--img-container start-->
         <div class="img-container">
             <img src="./images/videoTape.jpg" id="cover" alt="music-cover" />
         </div>
+        <!-- end of img-container-->
+
+        <!--navigation starts-->
         <div class="navigation">
             <button id="prev" class="action-btn">
                 <i class="fas fa-backward"></i>
@@ -38,9 +50,12 @@
                 <i class="fas fa-forward"></i>
             </button>
         </div>
+        <!--end of navigation menu-->
     </div>
+    <!--end of music-container-->
 
     <script type="application/javascript" lang="javascript" src="./script.js"></script>
 </body>
 
 </html>
+<!-- end -->
